Prevent wrap of date values in table.

--- a/src/web/css/app.css
+++ b/src/web/css/app.css
@@ -43,6 +43,11 @@ body {
     gap: 10px;
 }
 
+.char-10 {
+    display: inline-block;
+    min-width: 10ch;
+}
+
 .toast {
     max-width: 80vw;
     height: fit-content;
